// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal content it matches snapshot with no props 1`] = `
<ModalContent>
  <ModalContentstyles__Content>
    <div
      className="ModalContentstyles__Content-sc-1qqxn71-0 fZWjTb"
    >
      Content
    </div>
  </ModalContentstyles__Content>
</ModalContent>
`;

exports[`Modal content it matches snapshot with props 1`] = `
<ModalContent
  className="className"
  style={
    Object {
      "display": "inline",
    }
  }
>
  <ModalContentstyles__Content
    className="className"
    style={
      Object {
        "display": "inline",
      }
    }
  >
    <div
      className="ModalContentstyles__Content-sc-1qqxn71-0 fZWjTb className"
      style={
        Object {
          "display": "inline",
        }
      }
    >
      Content
    </div>
  </ModalContentstyles__Content>
</ModalContent>
`;
